# tinyNet

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  client_main.cpp  main.cpp  main_client.cpp  main_server.cpp  server_main.cpp  vcpkg.json
include/: Client.hpp  Server.hpp  ServerHandler.hpp  Socket.hpp
proto/: Message.proto
src/: Client.cpp  Server.cpp  ServerHandler.cpp  Socket.cpp
